--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div id="main">
 
         <div class="img">
-            <img src="C:\Users\Dell\Downloads\qr-code-component-main\qr-code-component-main\images\image-qr-code.png"
+            <img src="https://github.com/code-geass69/QR-code/blob/main/image-qr-code.png"
                 alt="">
         </div>
 
