--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div id="main">
 
         <div class="img">
-            <img src="https://github.com/code-geass69/QR-code/blob/main/image-qr-code.png"
+            <img src="image-qr-code.png"
                 alt="">
         </div>
 
